Work on some basic utils related to Prime numbers.